Clean up inspect by sneak
This also changes the Key-type from `Player` to `UUID` to minimize the impact in case an object isn't removed from the cache.

Fixes #49